--- a/readme
+++ b/readme
@@ -4,7 +4,9 @@ LNMP一键安装包是什么?
 _____________________
 
 
-LNMP一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装LNMP(Nginx、MySQL、PHP、phpMyAdmin)生产环境的Shell程序。
+LNMP一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian VPS(VDS)或独立主机安装LNMP(Nginx、MySQL、PHP、phpMyAdmin)生产环境的Shell程序。
+
+LNMP官网：http://lnmp.org
 
 作者:licess <www@lnmp.org>
 --------------------------------------------------------------------------------
@@ -14,14 +16,14 @@ LNMP一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debi
 安装
 _____
 
-wget http://soft.vpser.net/lnmp/lnmp0.4.tar.gz
-tar zxvf lnmp0.4.tar.gz
-cd lnmp0.4/
+wget http://soft.vpser.net/lnmp/lnmp0.5.tar.gz
+tar zxvf lnmp0.5.tar.gz
+cd lnmp0.5/
 
 CentOS/RadHat执行：
 ./centos.sh
 
-Debian/Ubuntu执行：
+Debian执行：
 ./debian.sh
 
 LNMP状态管理： /root/lnmp {start|stop|reload|restart|kill|status}
@@ -43,6 +45,25 @@ nginx :   /usr/local/nginx
 技术支持论坛：http://bbs.vpser.net/forum-25-1.html （注册需注明原因，人工审核。）
 
 ================================================================================
+LNMP一键安装包 更新记录：
+
+
+2010年
+5月21日更新nginx文件类型错误解析漏洞
+5月19日更新phpmyadmin
+5月19日更新pureftpd无法覆盖文件的问题。
+4月20日再次更新Debian上几个lib安装不成功的bug。
+4月8日更新了Debian上php没有安装成功的bug。
+
+2010年4月
+发布LNMP 0.4
+	>添加LNMP状态管理
+	>添加PureFTPd状态管理
+	>PHP增加suhosin
+	>增加VsFTPd、PureFTPd安装及管理
+	>增强Nginx虚拟主机添加功能，添加多域名、伪静态支持、日志是否启用的功能
+	>升级Nginx到0.7.65、MySQL到5.1.44
+
 2009年11月17日
 添加虚拟主机添加程序
 
