--- a/init.d/init.d.php-fpm5.2
+++ b/init.d/init.d.php-fpm5.2
@@ -15,7 +15,7 @@
 ### END INIT INFO
 
 # Author:   licess
-# website:  http://lnmp.org
+# website:  https://lnmp.org
 
 php_fpm_BIN=/usr/local/php/bin/php-cgi
 php_fpm_CONF=/usr/local/php/etc/php-fpm.conf
